# asr

./: .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  justfile  pyproject.toml  Тестовое задание на позицию "Разработчик Python" в Технология и Сервис.docx
config/: config.template.toml
src/: __main__.py
src/application/asr/: client.py
src/application/asr/commands/: recognize_file.py  recognize_url.py
src/application/asr/services/: asr_service.py
src/infrastructure/: config_loader.py  containers.py
src/presentation/api/: __main__.py  config.py  main.py
src/presentation/api/controllers/: main.py  voice_rec.py
