[tool.poetry]
name = "egp-service"
version = "0.1.0"
description = ""
authors = ["daron035 <kamil249@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.4"
punq = "^0.7.0"
adaptix = "^3.0.0b8"
orjson = "^3.10.10"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
pillow = "^11.0.0"
python-multipart = "^0.0.17"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
pyjwt = "^2.9.0"
types-pillow = "^10.2.0.20240822"
aiosmtpd = "^1.4.6"
jinja2 = "^3.1.4"
aiosmtplib = "^3.0.2"
pydub = "^0.25.1"
aiofiles = "^24.1.0"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ipython = "^8.29.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^3.3.1"
mypy = "^1.13.0"
ruff = "^0.7.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
